# sakura

./: .env.template  .gitignore  README.md  Taskfile.yml  compose.yaml  main.py  pyproject.toml
.github/workflows/: auto-release.yml  publish.yml  test.yml
bert_demo/: bench_bert.py  bench_in_memory_handle.py  bench_notebook.ipynb  hf_async_features.ipynb
docker/: Dockerfile
docker/static/redis/: run
docker/static/sakura/: run
mnist_demo/lightning/: main.py
sakura/: __init__.py  __main__.py  functional.py
sakura/ddp/: __init__.py
sakura/huggingface/: __init__.py
sakura/lightning/: __init__.py
sakura/ml/: async_trainer.py  sakura_trainer.py
sakura/tensorflow/: __init__.py
taskfiles/: bench.yml  build.yml  docker.yml  test.yml
tests/: conftest.py  test_async_trainer.py  test_cli.py  test_ddp.py  test_epoch_range.py  test_functional.py  test_huggingface.py  test_huggingface_e2e.py  test_lightning.py  test_pkg_info.py  test_sakura_trainer.py  test_tensorflow.py  test_worker_integration.py
